[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "motor>=3.7.1",
    "pydantic[email]>=2.11.7",
    "sqlalchemy[asyncio]>=2.0.42",
    "typing>=3.10.0.0",
    "uvicorn>=0.35.0",
]
